--- a/CSS/components/smallHeader.css
+++ b/CSS/components/smallHeader.css
@@ -1,5 +1,5 @@
-@media (max-width: 1500px) {
-    .header{
+@media (max-width: 1300px) {
+    .header {
         display: none;
     }
 
@@ -7,10 +7,59 @@
         width: 100%;
     }
 
+    .small_header_background_navbar_img {
+        position: absolute;
+        right: 10%; 
+        transition: opacity 0.5s ease; 
+        cursor: pointer; 
+    }
+
+    .small_header_menu {
+        list-style-type: none;
+        margin-top: 0;
+        padding: 0;
+        position: absolute;
+        width: 100%;
+        background-color: rgba(0, 0, 0, 1); 
+        color: white;
+        transform: translateY(-20px);
+        opacity: 0;
+        max-height: 0;
+        overflow: hidden;
+        transition: all 0.5s ease; 
+    }
+
+    .small_header_menu.show {
+        max-height: 500px; 
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+    .small_header li {
+        padding: 4px 40px; 
+        position: relative;
+    }
+
+    .small_header li::before {
+        content: '◦';
+        position: absolute;
+        left: 15px;
+    }
+
+    .small_header a {
+        font-weight: 400;
+        font-size: 20px;
+        letter-spacing: 3px;
+        text-decoration: none; 
+        color: inherit; 
+    }
+}
+
+@media (max-width: 1300px), (min-width: 1000px) {
     .small_header_background {
         width: 100%;
-        height: 100px;
-        background-color: black;;
+        height: 150px;
+        background-color: black;
     }
 
     .small_header_background_logo {
@@ -19,56 +68,38 @@
         width: 100%;
     }
 
-    .small_header_background_logo_img {
-        height: 100px;
+    .small_header_background_logo_img, 
+    .small_header_background_navbar_img {
+        height: 150px; 
     }
 
-    .small_header ul {
-        position: absolute;
-        padding-left: 0;
-        color: black;
-        width: 100%;
-        z-index: 3;
-    }
-
-    .small_header li {
-        background-color: rgba(255, 255, 2555, 90%);
-    }
-
-    .small_header li {
-        padding-top: 5px;
-        position: relative; 
-        padding-left: 20px;
-    }
-
-    .small_header li::before {
-        content: ''; 
-        position: absolute;
-        left: 0; 
-    }
-
-    .small_header a{
-        font-weight: 100;
-        font-size: 20px;
-        letter-spacing: 2px;
-    }
-
-    .small_header_menu {
-        list-style-type: none;
-        padding-top: 0;
-        margin-top: 0;
-    }
-
-    .small_header_menu_x {
-        display: flex;
-        justify-self: center;
-        height: 20px;
-        width: auto;
-        background-color: rgb(0, 0, 0);
-        color: rgb(249, 249, 249);
-        border: 0;
-        padding-left: 20px;
-        padding-right: 20px;
-        border-radius: 10px;
+    .small_header_background_navbar_img {
+        height: 30px; 
+        top: 50px; 
     }
 }
+
+@media (max-width: 999px), (min-width: 500px) {
+    .small_header_background {
+        width: 100%;
+        height: 120px;
+        background-color: black;
+    }
+
+    .small_header_background_logo {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .small_header_background_logo_img, 
+    .small_header_background_navbar_img {
+        height: 120px; 
+    }
+
+    .small_header_background_navbar_img {
+        height: 20px; 
+        top: 50px; 
+    }
+}
+
